--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign at Lexmark</h1>
 <h2>
-At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the workflow of 5,000 employees
+As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate the workflow of 5,000 employees
 
 <br><br>
 
@@ -88,12 +88,12 @@ At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the w
 
 <div class="row" style="padding-top:75px;">
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br> UX Researcher<br>UX Design Intern (ahem, me!)
+		<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br> UX Researcher<br>UX Design Intern (me!)
 
 		</p>
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off. 🎉
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>At Lexmark, I conducted user research, led the design direction, built a prototype, and prepared the documentation for developer hand-off. 🎉
 </p>
 										</div>
 
@@ -131,10 +131,10 @@ At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the w
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
-<p>Lexmark develops imaging solutions such as printers and software products that manage fleets of printers securely and efficiently.
+<p>Lexmark builds imaging solutions such as printers but also builds software that manages fleets of printers securely and efficiently.
 </p>
 
-<p>Employees can submit requests forms on a SaaS called ServiceNow to address a variety of needs, such as needing access to software or maintenance.</p>
+<p>At Lexmark, employees can submit requests forms on a SaaS called ServiceNow to address a variety of needs, such as needing access to software or maintenance.</p>
 
 
 
@@ -163,9 +163,9 @@ At Lexmark, I redesigned the ServiceNow web-app internal tool to alleviate the w
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
 					<p>
-ServiceNow sounded great, but in reality, it only received 12% of 30,000 service requests. The other method of making requests is over a phone call.</p>
+ServiceNow sounded great, but in reality, it only received 12% of 30,000 service requests. The other method of making requests was over a phone call.</p>
 
-	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal.</p>
+	<p>Busy phone lines meant additional employees were required, and employees calling in experienced longer wait times. ServiceNow ROI was abysmal.</p>
 
 				</div>
 
@@ -231,15 +231,13 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
-					<p>I decided to conduct three semi-structured interviews with the most frequent users of the platform: a manager, an AA, and a request handler. For ServiceNow to be successful, the platform had to be well-received and adopted by all three types of users, and so, their opinions were equally valued.
-</p>
+					<p>ServiceNow's target users were employees looking to submit a request. To identify which problems to tackle, I talked to employees who made frequent service requests. I interviewed the request handler as well because for ServiceNow to succeed, it had to be well-received by both users.
 				</div>
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:3em;">
-<p style="padding-bottom:15%;">During our interviews, we learned trouble started as soon as they arrived on the platform.
-Not only did users have difficulty completing the forms in their entirety error-free, but they even struggled with identifying the correct request form. Moving forward, we decided to redesign the IA, the interface, and all 10 request forms to help users quickly and accurately submit request forms!</p>
+<p style="padding-bottom:15%;">For ServiceNow users, trouble started quickly. Users not only had difficulty completing the forms in their entirety error-free but also struggled with identifying the correct request form. To improve the experience, we decided to redesign ServiceNow's IA, interface, and all ten request forms.</p>
 						</div>
 
 					</div>
@@ -319,7 +317,7 @@ Not only did users have difficulty completing the forms in their entirety error-
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Card Sort</h4>
 					<h3>When working on an internal tool, target users are close</h3>
-					<p>We conducted open card sorts with Lexmark employees to create ServiceNow's new information architecture. With the new IA, we eliminated unnecessary searching behaviors and reduced browsing time.
+					<p>We wanted to create an IA that accurately reflected users' mental models. We conducted an open card sort to create a new IA  that eliminated unnecessary searching behaviors and reduced browsing time.
 
 
 						<!-- In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors. -->
@@ -562,10 +560,9 @@ Not only did users have difficulty completing the forms in their entirety error-
 
 <div class="col-lg-3 col-md-3 col-sm-12">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
-<p style="color:#fff;">I replaced the cards' black border with drop shadows to increase the feeling of clickability. The previous black border was harsh, and it interfered with users' focus. I also rounded the card corners for a friendlier feel.
-</p>
+<p style="color:#fff;">I replaced the cards' solid borders with drop shadows to increase  clickability. The harshness of the black border also interfered with the users' focus. Lastly, I rounded the corners for a friendlier feel.</p>
 
-<p style="color:#fff;">I also opted for a header with a darker grey. Previously, the color contrast ratio with the text and background of the header was 1.44:1 which does not meet accessible design standards.</p>
+<p style="color:#fff;">I opted for a darker grey header because the color contrast ratio with the text and background of the previous design was 1.44:1, and it was not accessible.</p>
 <p style="color:#fff;"> </p>
 </div>
 </div><br><br><br><br>
@@ -585,10 +582,8 @@ Not only did users have difficulty completing the forms in their entirety error-
 
 <div class="col-lg-3 col-md-3 col-sm-12">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
-<p style="color:#fff;">I converted the form from two columns to a one column format. I hypothesize that the employee satisfaction ratings would increase because a one column design will help users to not skip any input fields and prevent misinterpretation. Moving forward, I'd love to test this design with users!</p>
-
-<p style="color:#fff;">The submit button is also a brighter blue to make it more identifiable.</p>
-<p style="color:#fff;"> </p>
+<p style="color:#fff;">I converted the form from two-columns to a one-column format. I hypothesize that the satisfaction ratings would increase because a one-column design will discourage users from skipping input fields and decrease misinterpretation. I would love to test the hypothesis.
+</p>
 </div>
 											 </div>
 
