--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign at Lexmark</h1>
 <h2>
-As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate the workflow of 5,000 employees
+As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate the workflow of 5,000 Lexmark employees
 
 <br><br>
 
@@ -131,8 +131,7 @@ As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate th
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
-<p>Lexmark builds imaging solutions such as printers but also builds software that manages fleets of printers securely and efficiently.
-</p>
+<p>Lexmark builds both imaging solutions such as printers and the software that manages the fleets of printers securely and efficiently.</p>
 
 <p>At Lexmark, employees can submit requests forms on a SaaS called ServiceNow to address a variety of needs, such as needing access to software or maintenance.</p>
 
@@ -237,7 +236,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:3em;">
-<p style="padding-bottom:15%;">For ServiceNow users, trouble started quickly. Users not only had difficulty completing the forms in their entirety error-free but also struggled with identifying the correct request form. To improve the experience, we decided to redesign ServiceNow's IA, interface, and all ten request forms.</p>
+<p style="padding-bottom:15%;">For ServiceNow users, trouble started quickly. Users not only had difficulty completing the forms in their entirety error-free but also struggled with identifying the correct request form. To improve the ServiceNow experience, we decided to redesign ServiceNow's IA, interface, and all ten request forms.</p>
 						</div>
 
 					</div>
@@ -252,7 +251,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h4>Baseline Usability Test</h4>
 				<h3>Employees were failing 47% of the time on ServiceNow</h3>
-				<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
+				<p>The interviews helped with problem validation, but we needed concrete data. The <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks helped identify the exact problematic steps in the user flow. </p>
 			</div>
 		</div>
 		<div>
@@ -317,7 +316,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Card Sort</h4>
 					<h3>When working on an internal tool, target users are close</h3>
-					<p>We wanted to create an IA that accurately reflected users' mental models. We conducted an open card sort to create a new IA  that eliminated unnecessary searching behaviors and reduced browsing time.
+					<p>Open card sorts with Lexmark employees helped us create an IA that accurately reflected our users' mental models. The new IA eliminated unnecessary searching behaviors and reduced browsing time.
 
 
 						<!-- In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors. -->
@@ -535,9 +534,9 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 	<div class="content-wrapper900">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4 style="color:#fff;">After the Implementation</h4>
+				<h4 style="color:#fff;">After the Internship</h4>
 				<h3 style="color:#fff;">I wasn't satisfied with the visual design </h3>
-				<p style="color:#fff;">I decided to rework the visuals of this project after my internship ended since I didn't have much independence in that area.</p><br><br><br>
+				<p style="color:#fff;">I reworked the visuals without Lexmark's design system to further improve the ServiceNow experience. For implementation, I'd prioritize the interface improvements because it dealt with accessibility concerns.</p><br><br><br>
 
 </div></div>
 </div></section>
@@ -582,7 +581,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 <div class="col-lg-3 col-md-3 col-sm-12">
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
-<p style="color:#fff;">I converted the form from two-columns to a one-column format. I hypothesize that the satisfaction ratings would increase because a one-column design will discourage users from skipping input fields and decrease misinterpretation. I would love to test the hypothesis.
+<p style="color:#fff;">I converted the form from two-columns to a one-column format. I hypothesize that the satisfaction ratings would increase because a one-column design will discourage users from skipping input fields and decrease misinterpretation. Feedback from friends supported the claim.
 </p>
 </div>
 											 </div>
