--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 	<body>
 		<section id= "navbar" class="navbar custom-navbar" role="navigation">
@@ -67,67 +68,63 @@
 
 
 	<section id="content" style="padding-bottom:6em;">
-		<div class="container"  style="max-width:1150px;">
+		<div class="container"  style="max-width:900px;">
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
-					<div class="row">
-						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay="0.6s" style="background-color: #E0F0F6">
-
-							<img style="width:100%;" src="images/thriveindex.png">
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.6s">
-
-
-							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
-								<h3>Thrive</h3>
-								<h4>PRODUCT DESIGNER | SPRING 2020</h4>
-								<p style="padding-top:.7em;">I drove a user-centered design project to design a mobile app for people who want to eat less meat.</p>
+					<div class="row box" style="background-color: #E0F0F6;">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>PASSION PROJECT</h4>
+								<h3>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</h3>
 							</div>
-							<div style="padding-left: 3em;">
-							<a class="button" href="thrive.html">View Case Study</a>
-						</div></div>
+							<div style="padding-top:1em;padding-left:3em;">
+								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s" style="background-color: #E0F0F6">
+							<a href="thrive.html">
+							<img style="width:100%;" src="images/thriveindex.png"></a>
+						</div>
 					</div>
 				</a>
 			</div>
 
 			<div class="project img-hover-zoom">
 				<a href="lexmark.html">
-					<div class="row">
-						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay="0.4s" style="background-color: #E3F0E6;">
-							<img style="width:100%;" src="images/lexmarkindex.png">
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.4s">
-
-							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
-								<h3>Lexmark</h3>
-								<h4>UX DESIGN INTERN | SUMMER 2019</h4>
-								<p style="padding-top:.7em;">Collaborated with developers and managers to redesign an internal service tool with 5000+ users.</p>
+					<div class="row box" style="background-color: #E3F0e6;">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>INTERNSHIP AT LEXMARK</h4>
+								<h3>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </h3>
 							</div>
-							<div style="padding-left: 3em;">
-							<a class="button" href="lexmark.html">View Case Study</a>
-						</div></div>
-
-
+							<div style="padding-top:1em;padding-left:3em;">
+								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s">
+							<a href="lexmark.html">
+							<img style="width:100%; padding-top:1em;" src="images/lexmarkindex.png"></a>
+						</div>
 					</div>
 				</a>
 			</div>
-
 			<div class="project img-hover-zoom">
 				<a href="pawls.html">
-					<div class="row">
-						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #E5EAFB">
-							<img style="width:100%;" src="images/pawlsindex.png">
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
+					<div class="row box" style="background-color: #E5EAFB">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4.5em;">								<h4>COURSE PROJECT</h4>
 
-							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
-								<h3>Pawls</h3>
-								<h4>PRODUCT DESIGNER | FALL 2019</h4>
-								<p style="padding-top:.7em;">Collaborated with other student engineers and researchers to create an IoT tech that decreases barking in dogs. </p>
+								<h3>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dog</h3>
 							</div>
-							<div style="padding-left: 3em;">
-							<a class="button" href="pawls.html">View Case Study</a>
+							<div style="padding-left: 0em;padding-top:1em;">
+							<!-- <a class="button" href="pawls.html">View Case Study</a> -->
 						</div></div>
+
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:2.5em; padding-bottom:1.5em;">
+							<a href="pawls.html">
+
+							<img style="width:100%;" src="images/pawlsindex.png"></a>
+						</div>
 
 
 					</div>
@@ -137,21 +134,26 @@
 
 			<div class="project img-hover-zoom">
 				<a href="vrgarden.html">
-					<div class="row">
+					<div class="row box" style="background-color:#ffe3e3">
+						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+
+
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>COURSE PROJECT</h4>
+
+								<h3>Building a gardening <span style="color:#C20000 ;">virtual reality</span> app </h3>
+							</div>
+							<div style="padding-left: 3em;padding-top:1em;">
+							<!-- <a class="button" href="vrgarden.html">View Case Study</a> -->
+						</div></div>
+
 
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #FFE3E3">
-							<img style="width:100%;" src="images/vrgardenindex.png">
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay=".5s">
+							<a href="vrgarden.html">
 
-							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
-								<h3>Virtual Garden</h3>
-								<h4>VR DESIGNER | FALL 2019</h4>
-								<p style="padding-top:.7em;">Collaborated with other student designers to create a virtual reality app w/ code that teaches people gardening techniques.</p>
-							</div>
-							<div style="padding-left: 3em;">
-							<a class="button" href="vrgarden.html">View Case Study</a>
-						</div></div>
+							<img style="width:100%; padding-top:1em; padding-bottom:1em;" src="images/vrgardenindex.png"></a>
+						</div>
+
 				</a>
 			</div>
 		</div>
