--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
 				<a href="pawls.html">
 					<div class="row box" style="background-color: #E5EAFB">
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
-							<div style="padding-left: 3em; padding-top:4.5em;">								<h4>COURSE PROJECT</h4>
+							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT</h4>
 
-								<h3>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dog</h3>
+								<h3>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dogs</h3>
 							</div>
 							<div style="padding-left: 0em;padding-top:1em;">
 							<!-- <a class="button" href="pawls.html">View Case Study</a> -->
 						</div></div>
 
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:2.5em; padding-bottom:1.5em;">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:2.25em; padding-bottom:1.25em;">
 							<a href="pawls.html">
 
 							<img style="width:100%;" src="images/pawlsindex.png"></a>
@@ -141,7 +141,7 @@
 							<div style="padding-left: 3em; padding-top:4em;">
 								<h4>COURSE PROJECT</h4>
 
-								<h3>Building a gardening <span style="color:#C20000 ;">virtual reality</span> app </h3>
+								<h3>Building a <span style="color:#C20000 ;">virtual reality</span> gardening  app </h3>
 							</div>
 							<div style="padding-left: 3em;padding-top:1em;">
 							<!-- <a class="button" href="vrgarden.html">View Case Study</a> -->
@@ -151,7 +151,7 @@
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 wow fadeInLeft box" data-wow-delay=".5s" style="background-color: #FFE3E3">
 							<a href="vrgarden.html">
 
-							<img style="width:100%; padding-top:1em; padding-bottom:1em;" src="images/vrgardenindex.png"></a>
+							<img style="width:100%; padding-top:.5em; padding-bottom:.5em;" src="images/vrgardenindex.png"></a>
 						</div>
 
 				</a>
