--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 	 				<h1 style="text-align: center;">MICHELLE KIM - PRODUCT DESIGNER</h1>
-						<h2 style="text-align: center;">I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h2>
+						<!-- <h2 style="text-align: center;">I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h2> -->
 				</div></div>
 </div>
 			</section>
