--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
 								<h4>PASSION PROJECT</h4>
-								<h3>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</h3>
+								<p>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
 								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
@@ -95,7 +95,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
 								<h4>INTERNSHIP AT LEXMARK</h4>
-								<h3>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </h3>
+								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
 								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
@@ -114,7 +114,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT</h4>
 
-								<h3>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dogs</h3>
+								<p>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dogs</p>
 							</div>
 							<div style="padding-left: 0em;padding-top:1em;">
 							<!-- <a class="button" href="pawls.html">View Case Study</a> -->
@@ -141,7 +141,7 @@
 							<div style="padding-left: 3em; padding-top:4em;">
 								<h4>COURSE PROJECT</h4>
 
-								<h3>Building a <span style="color:#C20000 ;">virtual reality</span> gardening  app </h3>
+								<p>Building a <span style="color:#C20000 ;">virtual reality</span> gardening  app </p>
 							</div>
 							<div style="padding-left: 3em;padding-top:1em;">
 							<!-- <a class="button" href="vrgarden.html">View Case Study</a> -->
