--- a/about.html
+++ b/about.html
@@ -54,31 +54,31 @@
 
 
 		<section id="content">
-			<div class="container"  style="max-width:1150px;">
+			<div class="container"  style="max-width:900px;">
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	 				<h1 class="h1exception" style="font-family: .3em;">73 words about me & my design process</h1>
+	 				<h1 class="h1exception" style="font-family: .3em;">About</h1>
 				</div></div>
 				<div class="row">
 
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 wow fadeInUp data-wow-delay=.3s">
-							<p style="padding-bottom:4em; line-height: 3rem; max-width:1000px;">I design because, like myself, design is inherently optimistic. I believe that progress, even in seemingly impossible challenges, is possible with the right design process. I am a dynamic problem solver who can consider many creative possibilities but then can successfully pinpoint what is most desirable and practical for the people and company I am designing for. I firmly believe learning from our target group is crucial to creating successful experiences.
+							<p style="padding-bottom:2em; line-height: 3rem;">
+I unexpectedly fell in love with the power of design while working with less-than-stellar electronic health records in the ER at 3 am. While my career goals have changed, my drive to improve the human experience has not. I design because I believe that progress, even in seemingly impossible challenges, is possible with the right design process. I am a dynamic problem solver who can successfully pinpoint the most desirable and feasible solution. I firmly believe learning from those the design will impact is crucial to creating successful experiences.
 
 						</p>
 						</div>
 					</div>
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInUp data-wow-delay=.6s">
-						<h4>PUBLIC ENGAGEMENTS</h4>
+						<h4>Engagement</h4>
 							<p style="line-height: 3rem;">➡️ 2019 Drupal Chicago Conference Speaker <br>
 	 						➡️ Published on the UX Collective, "Can Blind People Use Tinder?" <p>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInUp data-wow-delay=.9s">
-						<h4>LET'S CHAT</h4>
-						<p style="line-height: 3rem">👀 Looking for full-time product design positions <br>
-							✉️ <span style="font-weight:bold">minjin@umich.edu</span>
+						<h4>Email</h4>
+						<p>	✉️ <span>minjin@umich.edu</span></p>
 					</div>
 				</div>
 				<div class="row aboutphotos">
