--- a/thrive.html
+++ b/thrive.html
@@ -417,7 +417,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 </div>
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-								<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work with headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
+								<p> <span style= "font-weight:700;">1. Typography</span><br>The typeface needed to be clear, have a modern feel, legibile but still distinguishable. I settled on a less widely used geometric typeface.</p>
 								<img src="images/thrivetypeface.png" class="img-responsive">
 
 									<p><span style= "font-weight:700;">2. UI Buttons</span><br>I learned that users weren't comfortable with my newly created patterns. I ultimately turned to Google's Material Design.</p>
