--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-	 				<h1 style="text-align: center;">MICHELLE KIM - PRODUCT DESIGNER</h1>
-						<!-- <h2 style="text-align: center;">I design to improve the human experience and enjoy exploring problem spaces to uncover actionable insights.</h2> -->
-						<!-- <h2>Hi, I'm a pre-med who unexpectedly fell in love with the power of design while working with less-than-stellar electronic health records in the ER at 3am.</h2> -->
-				</div></div>
+	 				<h1>Michelle Kim - Product Designer <span style="color: #C0C0C0;">& Former Pre-med</span><br>
+						<h2>My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.
+</h2>
+</h1>				</div></div>
 </div>
 			</section>
 
@@ -69,6 +68,27 @@
 
 	<section id="content" style="padding-bottom:6em;">
 		<div class="container"  style="max-width:900px;">
+			<div class="project img-hover-zoom">
+				<a href="lexmark.html">
+					<div class="row box" style="background-color: #E3F0e6;">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
+							<div style="padding-left: 3em; padding-top:4em;">
+								<h4>INTERNSHIP AT LEXMARK</h4>
+								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
+							</div>
+							<div style="padding-top:1em;padding-left:3em;">
+								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s">
+							<a href="lexmark.html">
+							<img style="width:100%; padding-top:1em;" src="images/lexmarkindex.png"></a>
+						</div>
+					</div>
+				</a>
+			</div>
+
+
 			<div class="project img-hover-zoom">
 				<a href="thrive.html">
 					<div class="row box" style="background-color: #E0F0F6;">
@@ -89,25 +109,7 @@
 				</a>
 			</div>
 
-			<div class="project img-hover-zoom">
-				<a href="lexmark.html">
-					<div class="row box" style="background-color: #E3F0e6;">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
-							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>INTERNSHIP AT LEXMARK</h4>
-								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
-							</div>
-							<div style="padding-top:1em;padding-left:3em;">
-								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s">
-							<a href="lexmark.html">
-							<img style="width:100%; padding-top:1em;" src="images/lexmarkindex.png"></a>
-						</div>
-					</div>
-				</a>
-			</div>
+
 			<div class="project img-hover-zoom">
 				<a href="pawls.html">
 					<div class="row box" style="background-color: #E5EAFB">
