--- a/thrive.html
+++ b/thrive.html
@@ -454,6 +454,18 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 		</div>
 	</div>
 
+	<div class= "row">
+		<div class="col-lg-4 col-md-4 col-sm-4">
+			<h3 style="color:#fd7660;"><span style="font-weight: bold;"></span>CUSTOMIZATION OF DASHBOARD</h3>
+			<p style="color:#fff;">Users can track their progress and see the positive impact of their accumulated meat-free days.</p>
+</div>
+		<div class="col-lg-8 col-md-8 col-sm-8">
+	<br>	<img class="center" src="images/concretemetrics.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
+	</div>
+</div>
+
+
+
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
 				<h3 style="color:#fd7660;"><span style="font-weight: bold;"></span>FRIENDLY MOTIVATION</h3>
