--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 wow fadeInUp data-wow-delay=.3s">
 							<p style="padding-bottom:2em; line-height: 3rem;">
-I unexpectedly fell in love with the power of design while working with less-than-stellar electronic health records in the ER at 3 am. While my career goals have changed, my drive to improve the human experience has not. I design because I believe that progress, even in seemingly impossible challenges, is possible with the right design process. I am a dynamic problem solver who can successfully pinpoint the most desirable and feasible solution. I firmly believe learning from those the design will impact is crucial to creating successful experiences.
+I unexpectedly fell in love with the power of design while working with less-than-stellar electronic health records in the ER at 3 am. While my career goals have changed from pursuing medicine to design, my drive to improve the human experience has not. I design because I believe that progress, even in seemingly impossible challenges, is possible with the right design process. I am a dynamic problem solver who can successfully pinpoint the most desirable and feasible solution for the people and company I am designing for. I firmly believe learning from those the design will impact is crucial to creating successful experiences.
 
 						</p>
 						</div>
