--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 	<body>
 		<section id= "navbar" class="navbar custom-navbar" role="navigation">
@@ -56,10 +56,16 @@
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	 				<h1>Michelle Kim - Product Designer <span style="color: #C0C0C0;">& Former Pre-med</span><br>
-						<h2>My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.
+	 				<h1>Michelle Kim - Product Designer <span style="color: #C0C0C0;">& Former Pre-med</span></div></div>
+						<div class="row">
+							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+
+						<h2 style="padding-right:1.5em;">My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.
 </h2>
-</h1>				</div></div>
+<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+
+</div></div></div>
 </div>
 			</section>
 
