--- a/lexmark.html
+++ b/lexmark.html
@@ -88,12 +88,12 @@ As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate th
 
 <div class="row" style="padding-top:75px;">
 	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-		<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br> UX Researcher<br>UX Design Intern (me!)
+		<p style="padding-bottom: 5px;"> <span class= "barlow">Team</span><br>UX Team Manager<br> UX Researcher<br>UX Design Intern (me!)
 
 		</p>
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>At Lexmark, I conducted user research, led the design direction, built a prototype, and prepared the documentation for developer hand-off. 🎉
+									<p style="padding-bottom: 5px;"> <span class= "barlow">My Role</span><br>At Lexmark, I conducted user research, led the design direction, built a prototype, and prepared the documentation for developer hand-off. 🎉
 </p>
 										</div>
 
@@ -102,10 +102,10 @@ As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate th
 
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-						<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Tools</span><br> Axure, Sketch</p>
+						<p style="padding-bottom: 5px;"><span class= "barlow">Tools</span><br> Axure, Sketch</p>
 							</div>	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-													<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Duration</span><br> 3 months</p>
+													<p style="padding-bottom: 5px;"><span class= "barlow">Duration</span><br> 3 months</p>
 														</div>
 
 								</div>
@@ -130,7 +130,7 @@ As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate th
         </div>
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
-					<p><span style= "font-weight:700;">Overview</span><br></p>
+					<p><span class= "barlow">Overview</span><br></p>
 <p>Lexmark builds both imaging solutions such as printers and the software that manages the fleets of printers securely and efficiently.</p>
 
 <p>At Lexmark, employees can submit requests forms on a SaaS called ServiceNow to address a variety of needs, such as needing access to software or maintenance.</p>
@@ -157,7 +157,7 @@ As an intern, I redesigned ServiceNow, an internal web-app tool, to alleviate th
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>THE PROBLEM</h4>
-					<h3 style="line-height: 1.5em;">People weren't using ServiceNow as much as they should<h3></div></div>
+					<h3 style="line-height: 1.5em; letter-spacing:-.01em;">People weren't using ServiceNow as much as they should<h3></div></div>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
