--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-	 				<h1>Michelle Kim - Product Designer <span style="color: #dedede;">& Former Pre-med</span></div></div>
+	 				<h1>Michelle Kim - Product Designer</div></div>
 						<div class="row">
 							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
