--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="row box" style="background-color: #E3F0e6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>INTERNSHIP AT LEXMARK</h4>
+								<h4>INTERNSHIP &bull; INTERNAL TOOL</h4>
 								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
@@ -100,7 +100,7 @@
 					<div class="row box" style="background-color: #E0F0F6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>PASSION PROJECT</h4>
+								<h4>EXPECTED AUG 2020 APP STORE LAUNCH</h4>
 								<p>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
@@ -120,7 +120,7 @@
 				<a href="pawls.html">
 					<div class="row box" style="background-color: #E5EAFB">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
-							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT</h4>
+							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT  &bull; PERVASIVE COMPUTING</h4>
 
 								<p>Designing an <span style="color:#2048CB;">IoT</span> to help decrease barking in dogs</p>
 							</div>
@@ -147,7 +147,7 @@
 
 
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>COURSE PROJECT</h4>
+								<h4>COURSE PROJECT  &bull; GOOGLE CARDBOARD</h4>
 
 								<p>Building a <span style="color:#C20000 ;">virtual reality</span> gardening  app </p>
 							</div>
