--- a/lexmark.html
+++ b/lexmark.html
@@ -546,7 +546,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 
 															 		 <div class="row">
 																		 <div class="col-lg-3 col-md-3 col-sm-12">
-<p style="font-weight:bold; color:#ffffff; text-align:center;">Original</p>
+<p style="font-weight:bold; color:#ffffff; text-align:center;">Initial Mockup</p>
 																		 <img src="images/lexington_page1.png" class="img-responsive" style=" float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
 </div>
@@ -567,7 +567,7 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 </div><br><br><br><br>
 														 <div class="row">
 															 <div class="col-lg-3 col-md-3 col-sm-12">
-																 <p style="font-weight:bold; color:#ffffff; text-align:center;">Original</p>
+																 <p style="font-weight:bold; color:#ffffff; text-align:center;">Initial Mockup</p>
 
 															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
 
