--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<div class="row box" style="background-color: #E0F0F6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>EXPECTED AUG 2020 APP STORE LAUNCH</h4>
+								<h4>iOS APP &bull; SIDE PROJECT</h4>
 								<p>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
