--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="row">
 							<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-						<h2 style="padding-right:1.5em;">My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.  🎨🔬🤩
+						<h2 style="padding-right:1.5em;">My STEM background has helped me become a designer who supports every design decision with data and rationale. I am comfortable working in complex problem spaces and looking to make an impact.
 </h2>
 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
