--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<div class="row box" style="background-color: #E3F0e6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>INTERNSHIP &bull; INTERNAL TOOL</h4>
+								<h4>INTERNSHIP &bull; INTERNAL ADMIN TOOL</h4>
 								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
@@ -100,8 +100,8 @@
 					<div class="row box" style="background-color: #E0F0F6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
-								<h4>iOS APP &bull; SIDE PROJECT</h4>
-								<p>Designing a <span style="color:#1c84b1 ;">habit tracking app</span> for eating less meat</p>
+								<h4>iOS &bull; SIDE PROJECT &bull;  BEHAVIORAL CHANGE</h4>
+								<p>Designing to help people <span style="color:#1c84b1 ;">eat less meat</span></p>
 							</div>
 							<div style="padding-top:1em;padding-left:3em;">
 								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
