--- a/index.html
+++ b/index.html
@@ -74,29 +74,29 @@
 
 	<section id="content" style="padding-bottom:6em;">
 		<div class="container"  style="max-width:900px;">
+			<a href="lexmark.html">
 			<div class="project img-hover-zoom">
-				<a href="lexmark.html">
 					<div class="row box" style="background-color: #E3F0e6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
 								<h4>INTERNSHIP &bull; INTERNAL ADMIN TOOL</h4>
 								<p>Redesigning the <span style="color:#376743 ;">ServiceNow</span> experience </p>
 							</div>
-							<div style="padding-top:1em;padding-left:3em;">
+							<div style="padding-top:0em;padding-left:3em;">
 								<!-- <a class="button" href="thrive.html">View Case Study</a> -->
 							</div>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay="0.6s">
 							<a href="lexmark.html">
-							<img style="width:100%; padding-top:1em;" src="images/lexmarkindex.png"></a>
+							<img style="width:100%;" src="images/lexmarkindex.png"></a>
 						</div>
 					</div>
-				</a>
 			</div>
+		</a>
 
 
-			<div class="project img-hover-zoom">
-				<a href="thrive.html">
+		<a href="thrive.html">
+	<div class="project img-hover-zoom">
 					<div class="row box" style="background-color: #E0F0F6;">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">
@@ -112,12 +112,11 @@
 							<img style="width:100%;" src="images/thriveindex.png"></a>
 						</div>
 					</div>
-				</a>
 			</div>
-
+		</a>
+		<a href="pawls.html">
 
 			<div class="project img-hover-zoom">
-				<a href="pawls.html">
 					<div class="row box" style="background-color: #E5EAFB">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 							<div style="padding-left: 3em; padding-top:4em;">								<h4>COURSE PROJECT  &bull; PERVASIVE COMPUTING</h4>
@@ -128,7 +127,7 @@
 							<!-- <a class="button" href="pawls.html">View Case Study</a> -->
 						</div></div>
 
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:2.25em; padding-bottom:1.25em;">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInRight box" data-wow-delay=".5s" style="background-color: #E5EAFB; padding-top:1.25em;">
 							<a href="pawls.html">
 
 							<img style="width:100%;" src="images/pawlsindex.png"></a>
@@ -136,12 +135,11 @@
 
 
 					</div>
-				</a>
 			</div>
+		</a>
 
-
+		<a href="vrgarden.html">
 			<div class="project img-hover-zoom">
-				<a href="vrgarden.html">
 					<div class="row box" style="background-color:#ffe3e3">
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.6s">
 
@@ -161,10 +159,12 @@
 
 							<img style="width:100%; padding-top:.5em; padding-bottom:.5em;" src="images/vrgardenindex.png"></a>
 						</div>
-
-				</a>
 			</div>
 		</div>
+	</a>
+</div>
+
+
 	</section>
 
 
