--- a/pawls.html
+++ b/pawls.html
@@ -159,7 +159,7 @@
 										<div class="row">
 											<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-												<h4>The Research</h4>
+												<h4>DIARY STUDY</h4>
 
 												<h3>Diary Study</h3>
 
