--- a/about.html
+++ b/about.html
@@ -77,8 +77,10 @@ I unexpectedly fell in love with the power of design while working with less-tha
 	 						➡️ Published on the UX Collective, "Can Blind People Use Tinder?" <p>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInUp data-wow-delay=.9s">
-						<h4>Email</h4>
-						<p>	✉️ <span>minjin@umich.edu</span></p>
+						<h4>Contact</h4>
+						<p>	✉️ <span>minjin@umich.edu</span><br>
+
+						<i class="fab fa-linkedin-in"></i> <span style="padding-left:6px;"><a href="https://www.linkedin.com/in/mkimdesign/">mkimdesign</a> </span></p>
 					</div>
 				</div>
 				<div class="row aboutphotos">
