--- a/lexmark.html
+++ b/lexmark.html
@@ -561,29 +561,11 @@ ServiceNow sounded great, but in reality, it only received 12% of 30,000 service
 		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
 <p style="color:#fff;">I replaced the cards' solid borders with drop shadows to increase  clickability. The harshness of the black border also interfered with the users' focus. Lastly, I rounded the corners for a friendlier feel.</p>
 
-<p style="color:#fff;">I opted for a darker grey header because the color contrast ratio with the text and background of the previous design was 1.44:1, and it was not accessible.</p>
-<p style="color:#fff;"> </p>
+<p style="color:#fff;">I got rid of the header because the color contrast ratio with the text and background of the previous design was 1.44:1, and it was not accessible.</p>
+<p style="color:#fff;">I got rid of the breadcrumb and created a new left nav that would allow users to move around the platform with less clicks.</p>
 </div>
 </div><br><br><br><br>
-														 <div class="row">
-															 <div class="col-lg-3 col-md-3 col-sm-12">
-																 <p style="font-weight:bold; color:#ffffff; text-align:center;">Initial Mockup</p>
 
-															 <img src="images/ergonomic_furniture1.png" class="img-responsive" style="float:right; box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
-
-</div>
-															 <div class="col-lg-6 col-md-6 col-sm-12">
-																 <p style="font-weight:bold; color:#ffffff; text-align:center;">The Redesign</p>
-
-														<img src="images/rest.png" class="img-responsive center" style="box-shadow: 0 -2px 10px rgba(0, 0, 0, 1); color: #EBEBEB;">
-
-</div>
-
-<div class="col-lg-3 col-md-3 col-sm-12">
-		 <p style="font-weight:bold; color:#ffffff; text-align:center;">What's Changed?</p>
-<p style="color:#fff;">I converted the form from two-columns to a one-column format. I hypothesize that the satisfaction ratings would increase because a one-column design will discourage users from skipping input fields and decrease misinterpretation. Feedback from friends supported the claim.
-</p>
-</div>
 											 </div>
 
 								             </div>
