--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <h1 style="padding-top: 1%;font-size: 22px;  letter-spacing: 0em;  font-weight: normal; line-height: 140%;">
-I'm am incoming product designer at <a target="_blank" href="https://www.linkedin.com/company/hiextend/">Extend, Inc</a> in San Francisco, CA. I received my masters in human-computer interaction from <a target="_blank" href="https://www.si.umich.edu/">Michigan</a> in May 2020. During grad school, I was a UX Design Intern at <a target="_blank" href="https://www.linkedin.com/company/lexmark/">Lexmark</a>. I am no longer looking for a full time opportunity, but please feel free to <a target="_blank" href="mailto:minjin@umich.edu">email</a> for anything else! Thank you for visiting :) </h1>
+I'm an incoming product designer at <a target="_blank" href="https://www.linkedin.com/company/hiextend/">Extend, Inc</a> in San Francisco, CA. I received my masters in human-computer interaction from <a target="_blank" href="https://www.si.umich.edu/">Michigan</a> in May 2020. During grad school, I was a UX Design Intern at <a target="_blank" href="https://www.linkedin.com/company/lexmark/">Lexmark</a>. I am no longer looking for a full time opportunity, but please feel free to <a target="_blank" href="mailto:minjin@umich.edu">email</a> me for anything else! Thank you for visiting.</h1>
 </h1>
 
 </div></div>
